@@ -1180,6 +1180,7 @@ $wgAutoloadLocalClasses = array(
 	'TablePager' => __DIR__ . '/includes/pager/TablePager.php',
 	'TempFSFile' => __DIR__ . '/includes/filebackend/TempFSFile.php',
 	'TempFileRepo' => __DIR__ . '/includes/filerepo/FileRepo.php',
+	'TemplateParser' => __DIR__ . '/includes/TemplateParser.php',
 	'TestFileOpPerformance' => __DIR__ . '/maintenance/fileOpPerfTest.php',
 	'TextContent' => __DIR__ . '/includes/content/TextContent.php',
 	'TextContentHandler' => __DIR__ . '/includes/content/TextContentHandler.php',
