@@ -98,7 +98,7 @@ if ( defined( 'MW_CONFIG_CALLBACK' ) ) {
 	# the wiki installer needs to be launched or the generated file uploaded to
 	# the root wiki directory. Give a hint, if it is not readable by the server.
 	if ( !is_readable( MW_CONFIG_FILE ) ) {
-		require_once "$IP/includes/templates/NoLocalSettings.php";
+		require_once "$IP/includes/NoLocalSettings.php";
 		die();
 	}
 
